# Controlling-Repetition-in-Protein-Language-Models

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
configs/: README.md  __init__.py  main.yaml
configs/dataset/: posneg.yaml  toy.yaml
configs/methods/: contrastive_layer.yaml  control.yaml  neuron_topk.yaml  probe_layer.yaml
configs/models/: dplm.yaml  esm2.yaml  esm3.yaml  progen2_base.yaml  progen2_small.yaml  protgpt2.yaml
configs/models/backend/: causal.yaml  mlm.yaml
configs/models/generation/: esm3_default.yaml
configs/models/init/: esm3_open.yaml
data/: README.md
data/ablate/esm3_sweeps_len200/: esm3_len200_steps10.fasta  esm3_len200_steps10.metrics.csv  esm3_len200_steps10.summary.json  esm3_len200_steps100.fasta  esm3_len200_steps100.metrics.csv  esm3_len200_steps100.summary.json  esm3_len200_steps20.fasta  esm3_len200_steps20.metrics.csv  esm3_len200_steps20.summary.json  esm3_len200_steps200.fasta  esm3_len200_steps200.metrics.csv  esm3_len200_steps200.summary.json  esm3_len200_steps40.fasta  esm3_len200_steps40.metrics.csv  esm3_len200_steps40.summary.json
data/example/: example.fasta  example.metrics.csv  example.summary.json
data/neg/: gpt_neg.metrics.csv  gpt_neg.metrics.csv.bak  gpt_neg.sequences.fasta  protgpt2_neg.metrics.csv
data/pos/: cath.fa  cath.metrics.csv  cath.metrics.csv.bak  prefix_source.metrics.csv  prefix_source.metrics.csv.bak  scop.fa  scop.metrics.csv  scop.metrics.csv.bak
data/raw/cath/: cath-dataset-nonredundant-S20.fa
docs/: REPRODUCIBILITY.md
docs/site/: bibtex.txt  index.html
docs/site/assets/css/: style.css
docs/site/assets/js/: main.js
docs/site/poster/: poster.css  poster.html
requirements/: dev.txt  runtime.txt
scripts/: README.md
scripts/py/post_analysis/: fasta_pid_summary.py  summarize_decoding_sweep.py
scripts/py/post_analysis/ablation_esm3_decoding_steps/: summarize_ablation_esm3_decoding_steps.py
scripts/py/post_analysis/sweep_decoding_uccs/: summarize_decoding_sweep.py
scripts/py/post_analysis/sweep_dplm/: summarize_sweep_dplm.py
scripts/py/post_analysis/sweep_esm2/: summarize_sweep_esm2.py
scripts/py/post_analysis/sweep_progen2/: plot_layer_scores.py  summarize_sweep_progen2.py
scripts/py/pre_analysis/: dataset_metric_comparison.py  kde_metric_vis.py  mechanistic_probe.py  neuron_activation_correlation.py  panel_metric_vis.py
scripts/py/run/: README.md  evaluate_sequences.py  generate_esm3_steps.py  generate_negatives.py  main_experiment.py
scripts/py/run/sweeps/: sweep_ablation_decoding.py  sweep_dplm.py  sweep_esm2.py  sweep_esm3.py  sweep_progen2_base.py  sweep_protgpt2.py
scripts/py/tests/: generate_dplm.py  mock_test_esm3.py
scripts/sh/test/: local_ablation_decoding_smoke.sh  local_dplm_smoke.sh  local_progen2_smoke.sh  local_uccs_smoke.sh
src/repetition_control_plm/metrics/: __init__.py  repetition.py  structure.py
src/repetition_control_plm/models/: base.py
src/repetition_control_plm/utils/: constants.py
src/replm/: __init__.py  config.py
src/replm/datasets/: base.py  posneg_provider.py  toy.py
src/replm/metrics/: __init__.py  diversity.py  repetition.py  structure.py
src/replm/models/: __init__.py  base.py  utils.py
src/replm/models/autoregressive/: __init__.py  hf_causal_lm.py
src/replm/models/dplm/: __init__.py  backend.py  dplm.py  utils.py
src/replm/models/masked/: __init__.py  esm2_backend.py  esm3_backend.py  esm3_config.py  (+1 more)
src/replm/steer/: __init__.py  io.py  ops.py  readme.md  steerer.py
src/replm/utils/: constants.py  io.py
tests/metrics/: test_diversity.py
tests/models/: test_base_backend.py  test_esm3_backend.py
tests/steer/: test_io.py  test_methods.py  test_steerer.py
(+10 files in other folders)
