[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "replm"
version = "0.1.0"
description = "Controlling Repetition in Protein Language Models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "REPLM Authors" }]
keywords = ["protein-language-models", "repetition", "transformers", "bioinformatics"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
  "torch==2.2.2",
  "numpy==1.26.4",
  "hydra-core==1.3.2",
  "omegaconf==2.3.0",
  "transformers==4.38.2",
  "tqdm==4.66.2",
  "matplotlib==3.8.3",
  "httpx==0.26.0",
  "esm==3.2.3",
]

[project.optional-dependencies]
dev = [
  "black==24.10.0",
  "ruff==0.4.5",
  "pytest==7.4.4",
  "mypy==1.10.0",
]
docs = ["mkdocs>=1.5", "mkdocs-material>=9.5"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["replm*"]

[tool.black]
line-length = 108
target-version = ["py310", "py311"]
extend-exclude = '''
(
  src/replm/models/dplm
)
'''

[tool.ruff]
line-length = 108
extend-exclude = ["src/replm/models/dplm"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
